--- a/something.tex
+++ b/something.tex
@@ -1,4 +1,5 @@
 I just added something
 The second me added something here
 This line should only show up in the demo_branch
+Added line as lihongshan
 
